--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="board" id="board"></div>
+    <div class="container">
+      <div class="scoreboard">
+        <span class="score" id="score">Score: 0</span>
+        <span class="highestscore" id="highestscore">Highest Score: 0</span>
+      </div>
+      <div class="board" id="board"></div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
